added about text ,language frame work content of about section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div> 
           
           <div id="get-my-resume-button">
-            <a href="#">Get my resume</a>
+            <button type="butt">Get my resume</button>
           </div>
 
          </div>
