commit for resposive web up to about me section implement using css grid and flex layout

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
              <img src="image\Frame.png" alt="">
         </div>
            
-        <div class="about-section-content" id="horizontal-line"> <hr  width="80%" style="border: 0; height: 1px; background: #fff;"></div>
+        <div class="about-section-content" id="horizontal-line"> <hr  width="80%"  ></div>
           
         <div class="about-section-content" id="about-section-list" >
                <div  class="experience"  id="language">
