--- a/index.html
+++ b/index.html
@@ -260,8 +260,46 @@
                </div>
 
           </div>  
-           
+           </section>
 
-        </section>
+          <section class="contact-forms">
+            <div class="contact-form-content" id="contact-text">
+              <p>I'm always interested in hearing about new projects, 
+                so if you'd like to chat please get in touch.</p> 
+            </div>
+            <div class="contact-form-content"  id="form-container">
+              <form class="contact-form"   action="https://formspree.io/f/moqgbdvw" method="post">
+                <div class="form-row">
+                  <div class="form-group">
+                    <input type="text" name="first_name" maxlength="30"  placeholder="First Name">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" name="last_name" maxlength="30"  placeholder="Last Name">
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group full-width">
+                    <input type="email" name="email" maxlength="30" placeholder="Email Adress">
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group full-width">
+                    <textarea id="contact-textarea" name="message" maxlength="500"  placeholder="Write me something..."></textarea>
+                  </div>
+                </div>
+                <div class="form-row">
+              <input type="submit" value="Get in Touch">
+                </div>
+              </form>
+            </div>
+            <div class="contact-adress-links">
+              <ul>
+                  <li><a href="https://github.com/yared-abera"><i class="fa fa-github"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/yared-abera-a823882ab/"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href=""><i class="fa fa-angellist"></i></a></li>
+                  <li><a href=""><i class="fa fa-medium"></i></a></li>
+                 </ul>   
+            </div>
+           </section>
   </body>
 </html>
