--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>first portifolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="home.css" />  
-    <script src="h.js"></script>
+    <script >
+    function showmenubar() {
+      const news = document.querySelector('.menu_toolbar')
+      news.style.display = 'flex'
+  }
+  function hidemenubar() {
+      const news = document.querySelector('.menu_toolbar')
+      news.style.display = 'none'
+  }</script>
   </head>
   <body> 
       <div class="menu_toolbar">
